--- a/viz_part1.Rmd
+++ b/viz_part1.Rmd
@@ -5,26 +5,80 @@ date: "10/5/2021"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+```{r }
+library(tidyverse)
 ```
 
-## R Markdown
+Load in a dataset that we'll use often.
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r}
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USC00519397", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USC00519397 = "Waikiki_HA",
+      USS0023B17S = "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+##Scatterplot
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+tmax vs tmin
+
+```{r}
+weather_df %>% 
+  ggplot(aes( x = tmin, y = tmax)) +
+  geom_point()
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+you can save ggplots
+
+```{r}
+ggp_tmax_tmin = 
+  weather_df %>% 
+  ggplot(aes( x = tmin, y = tmax)) +
+  geom_point()
+
+ggp_tmax_tmin
+
+```
+
+
+## Let's fancy it up
+
+add color? lines?other stuff?
+
+```{r}
+weather_df %>% 
+  ggplot(aes( x = tmin, y = tmax, color = name)) +
+  #`alpha` creates transparency
+  geom_point(alpha = 0.3) +
+  geom_smooth(se = FALSE)
+```
+
+
+```{r}
+weather_df %>% 
+  ggplot(aes( x = tmin, y = tmax)) +
+  geom_point(aes(color = name),alpha = 0.3) +
+  geom_smooth(se = FALSE)
+```
+
+
+```{r}
+weather_df %>% 
+  ggplot(aes( x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = 0.3) +
+  geom_smooth(se = FALSE) +
+  facet_grid(. ~ name)
+```
+
