--- a/viz_part1.Rmd
+++ b/viz_part1.Rmd
@@ -82,3 +82,52 @@ weather_df %>%
   facet_grid(. ~ name)
 ```
 
+
+Lets make a one more scatterplot
+
+```{r}
+weather_df %>% 
+  ggplot(aes( x = date, y = tmax, size = prcp)) +
+  geom_point(alpha = .3) +
+  facet_grid(. ~ name) +
+  geom_smooth((se = FALSE))
+```
+
+
+## use data manipilation as part of this
+
+```{r}
+weather_df %>% 
+  filter(name == "CentralPark_NY") %>% 
+  mutate(
+    tmax = tmax * (9/5) + 32,
+    tmin = tmin * (9/5) + 32
+     ) %>% 
+  ggplot(aes(x = tmin, y = tmax)) +
+  geom_point()
+```
+
+
+#stacking geoms
+
+which geoms do you want?
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_smooth()
+```
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax)) +
+  geom_hex()
+```
+
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax)) +
+  geom_bin_2d()
+```
+
