--- a/viz_part2.Rmd
+++ b/viz_part2.Rmd
@@ -44,7 +44,7 @@ weather_df %>%
   
 ```
 
-##labels
+## labels
 
 ```{r}
 weather_df %>% 
@@ -56,5 +56,73 @@ weather_df %>%
     y = "Maximum daily temperature(C)",
     caption = "Data from rnoaa package; temperature in 2017."
   )
+```
+
+
+## Scales
+
+start with the same plot
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .5) +
+  labs(
+    title = "Temperature plot",
+    x = "Minimum daily temperature(C)",
+    y = "Maximum daily temperature(C)",
+    caption = "Data from rnoaa package; temperature in 2017."
+  ) +
+  #defining some scales:
+  #for x axis
+  scale_x_continuous(
+    #define and label the breaks(needs to be numbers)
+    breaks = c(-15,0,15),
+    labels = c("-15 C","0","15")
+  ) +
+  #for y axis
+  scale_y_continuous(
+    #square root transformation
+    #trans = "sqrt"
+    #change the y axis labels to the right side
+    position = "right"
+  )
+```
+
+Look at color scales
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .5) +
+  labs(
+    title = "Temperature plot",
+    x = "Minimum daily temperature(C)",
+    y = "Maximum daily temperature(C)",
+    caption = "Data from rnoaa package; temperature in 2017."
+  ) +
+  # Change the color of the points; by default it goes from 0 to 360
+  scale_color_hue(
+    #change the label:"name" of the points to "location"
+    name = "Location",
+    h = c(100,300))
+```
+
+
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .5) +
+  labs(
+    title = "Temperature plot",
+    x = "Minimum daily temperature(C)",
+    y = "Maximum daily temperature(C)",
+    caption = "Data from rnoaa package; temperature in 2017."
+  ) +
+  #scale_color_viridis assume the value you enter is continuous
+  viridis::scale_color_viridis(
+    name = "location",
+    discrete = TRUE)
 ```
 
