--- a/viz_part2.Rmd
+++ b/viz_part2.Rmd
@@ -199,3 +199,26 @@ scale_color_discrete = scale_color_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
 ```
 
+## Data args in `geom`
+
+```{r}
+central_park = 
+  weather_df %>% 
+  filter(name == "CentralPark_NY") 
+
+waikiki = 
+  weather_df %>% 
+  filter(name == "Waikiki_HA")
+
+# to use one dataset on geom_point() and a diff dataset on geom_line()
+ggplot(data = waikiki, aes(x = date, y = tmax, color = name)) +
+  geom_point() +
+  geom_line(data = central_park)
+```
+
+
+
+```{r}
+
+```
+
