--- a/viz_part2.Rmd
+++ b/viz_part2.Rmd
@@ -216,9 +216,45 @@ ggplot(data = waikiki, aes(x = date, y = tmax, color = name)) +
   geom_line(data = central_park)
 ```
 
+## `patchwork`
 
+remember faceting?
 
 ```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, fill = name)) +
+  geom_density(alpha = .5) +
+  #create a multipanel plot with the exact same type of plot
+  facet_grid((. ~ name))
+```
 
+what happens when you want multipanel plot but cant facet ...?
+
+```{r}
+tmax_tmin_p =
+  weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = .5) +
+  theme(legend.position = "none")
+
+prcp_dens_p = 
+  weather_df %>%
+  filter(prcp > 0) %>% 
+  ggplot(aes(x = prcp, fill = name)) +
+  geom_density(alpha = .5) +
+  theme(legend.position =  "none")
+
+tmax_date_p = 
+  weather_df %>% 
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_point() +
+  #se = standard error
+  geom_smooth(se = FALSE) +
+  theme(legend.position = "none")
+  
+# use patchwork to organzie diff. type of plots into a single figure, even with fundamentally diff geometries, mappings and arguments.
+
+#tmax_tmin_p + prcp_dens_p + tmax_date_p
+(tmax_tmin_p + prcp_dens_p) / tmax_date_p
 ```
 
